arof-conf and rest server integrated
