# AROF/agent/python-flask-server/swagger_server/controllers/default_controller.py
@@ -19,35 +19,26 @@ def create_configuration_by_id(arof_id, enable=False):  # noqa: E501
     return database.create_operation(arof_id, enable)
 
 
-def delete_configuration_by_id(arof_id, enable=False):  # noqa: E501
+def delete_configuration_by_id(arof_id):  # noqa: E501
     """Delete configuration by ID
 
     Delete operation of resource: laser # noqa: E501
 
     :param arof_id: arof id
     :type arof_id: int
-    :param enable: enable or disable the laser
-    :type enable: bool
 
     :rtype: None
     """
-    exec_config_app(arof_id, enable)
     database.delete_operation(arof_id)
 
 
-def retrieve_configuration_by_id(arof_id, enable=False):  # noqa: E501
+def retrieve_configuration_by_id():  # noqa: E501
     """Retrieve configuration
 
     Retrieve operation of resource: laser # noqa: E501
 
-    :param arof_id: arof id
-    :type arof_id: int
-    :param enable: enable or disable the laser
-    :type enable: bool
-
     :rtype: List[Operation]
     """
-    exec_config_app(arof_id, enable)
     return database.operations
 
 
@@ -68,7 +59,7 @@ def update_configuration_by_id(arof_id, enable=False):  # noqa: E501
 
 
 def exec_config_app(arof_id, enable):
-    call_arg_list = ["arof-conf/arof-conf", "-i", "{:d}".format(arof_id), "-e", "{:d}".format(enable)]
-    call_arg_list = ["arof-conf/arof-conf", "-v", "-i", "{:d}".format(arof_id), "-e", "{:d}".format(enable)]
+    # call_arg_list = ["swagger_server/arof-conf/arof-conf", "-i", "{:d}".format(arof_id), "-e", "{:d}".format(enable)]
+    call_arg_list = ["swagger_server/arof-conf/arof-conf", "-v", "-i", "{:d}".format(arof_id), "-e", "{:d}".format(enable)]
     # print (['CMD:', call_arg_list])
     return call(call_arg_list)
